...
  return (
    <Layout style={styles.layout}>
      <SafeAreaView style={styles.safeAreaView}>
        <TopNavigation
          title="Marvel Heroes"
          alignment="center"
          testID="gallery-top-nav"
          accessoryRight={loading ? () => <Spinner size="small" /> : null}
        />

        {error ? (
          <Text>{error.message || 'Sorry, something went wrong.'}</Text>
        ) : (
          <>
            <Input
              value={search}
              onChangeText={setSearch}
              autoCapitalize="none"
              autoCorrect={false}
              testID="search"
              placeholder="search"
            />

            <List
              data={
                search
...
